--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ Flask==3.0.0
 Flask-SQLAlchemy==3.1.1
 Werkzeug==3.0.1
 gunicorn==21.2.0
-psycopg2-binary==2.9.9
+psycopg[binary]==3.2.3
 
 # Opcional - para gerar PDFs
 # weasyprint>=60.0
