--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ Flask-SQLAlchemy==3.1.1
 Werkzeug==3.0.1
 gunicorn==21.2.0
 psycopg[binary]==3.2.3
+psycopg2-binary==2.9.9
 
 # Opcional - para gerar PDFs
 # weasyprint>=60.0
