Fix mobile toggle and add openpyxl

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,9 @@ Werkzeug==3.0.1
 gunicorn==21.2.0
 psycopg[binary]==3.2.3
 psycopg2-binary==2.9.9
+openpyxl==3.1.5
 
 # Opcional - para gerar PDFs
 weasyprint>=60.0
 # cache-bust 2026-02-06
-
 
